chore: update @nuxtjs/i18n to version 10.1.0, add patch-package dependency, and refactor CSS imports

--- a/i18n/locales/fr.json
+++ b/i18n/locales/fr.json
@@ -184,7 +184,12 @@
     },
     "columns": {
       "tooltip": "Colonnes",
-      "description": "Ajouter des colonnes"
+      "description": "Ajouter des colonnes",
+      "layout": {
+        "30/70": "30/70",
+        "50/50": "50/50",
+        "70/30": "70/30"
+      }
     },
     "link": {
       "tooltip": "Lien",
