--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -184,7 +184,12 @@
     },
     "columns": {
       "tooltip": "Columns",
-      "description": "Add columns"
+      "description": "Add columns",
+      "layout": {
+        "30/70": "30/70",
+        "50/50": "50/50",
+        "70/30": "70/30"
+      }
     },
     "link": {
       "tooltip": "Link",
